# sort-research-rs

./: .editorconfig  .gitignore  Cargo.toml  README.md  build.rs  comp_data_small.txt  ideas.txt  notex.txt  run_benchmark.sh  test-port.md  test.sh
.github/workflows/: rust.yml
benches/: bench.rs  bench_custom.rs  trash_prediction.rs  util.rs
benches/bench_other/: mod.rs  partition.rs  partition_point.rs  util.rs
benches/modules/: mod.rs  partition.rs  partition_point.rs  sort.rs  util.rs
fuzz/: Cargo.toml
fuzz-afl/: Cargo.toml
fuzz-afl/in/: descending.txt  random.txt  random_binary.txt  random_dense.txt  saws_long.txt  saws_short.txt
fuzz-afl/src/: main.rs
fuzz/fuzz_targets/: libfuzzer_main.rs  rust_new_stable.rs  rust_new_unstable.rs
fuzz/src/: util.rs
ipnsort/: Cargo.toml  README.md
ipnsort/src/: heapsort.rs  lib.rs  pivot.rs  quicksort.rs  smallsort.rs
ipnsort/tests/: main.rs
results/: .gitignore  index.html
results/04_02_23_stable_sort_shootout/: 04_02_23_interior_mutability_zen3.json  04_02_23_stable_sort_shootout_zen3.json
results/08_02_23_glidesort_analysis/: 08_02_23_general_int_guess_zen3.json  08_02_23_random_p_zen3.json  09_02_23_debug_zen3.json  09_02_23_scaling_broadwell.json  09_02_23_scaling_zen3.json
results/08_02_23_stable_sort_shootout/: 08_02_23_general_zen3.json  08_02_23_random_d_zen3.json  08_02_23_random_zen3.json  09_02_23_scaling_firestorm.json  09_02_23_val_with_mutex_zen3.json
results/0eabf29/: comp_data.txt
results/17_02_23_intel_avx512_analysis/: 05_04_23_zen3.json  10k_i32_cascade_lake.json  10k_u64_cascade_lake.json  27_02_23_skylake.json  31_03_2023_firestorm.json  scaling_i32_cascade_lake.json  scaling_u64_cascade_lake.json  scaling_z1_u64_cascade_lake.json
results/30a063d/: comp_count.txt
results/53bd0f8/: comp_data.txt  index.html
results/9af9473/: comp_data.txt
results/b9cf60a/: comp_data.txt
results/b9d13d0/: rust_new_unstable_zen3.json  rust_std_unstable_zen3.json
results/cf11b1e/: README.md  comp_data.txt  index.html
results/e746538/: comp_data.txt
results/ef55dc9/: comp_data.txt  comp_result_new_vs_std.txt  comp_result_unstable_vs_stable.txt  critcmp_broadwell.txt  critcmp_zen3.txt
results/ipnsort_and_driftsort_intro/: graph_all.sh
results/std_unstable_vs_std_stable/: comp_data.txt
results/wpwoodjr/: comp_data.txt
sort_test_tools/: Cargo.toml  README.md
sort_test_tools/src/: ffi_types.rs  known_good_stable_sort.rs  lib.rs  patterns.rs  tests.rs  zipf.rs
sort_test_tools/tests/: main.rs
src/: cpp_std_ffi.rs  ffi_util.rs  graveyard.rs  lib.rs  patterns.rs
src/cpp/: c_crumsort.cpp  c_fluxsort.cpp  c_idisort.cpp  c_llvm_libc.cpp  c_logsort.cpp  c_std_sys.cpp  cpp_blockquicksort.cpp  cpp_gerbens_qsort.cpp  cpp_highwaysort.cpp  cpp_intel_avx512.cpp  cpp_ips4o.cpp  cpp_nanosort.cpp  cpp_pdqsort.cpp  cpp_powersort.cpp  cpp_simdsort.cpp  cpp_std_gcc4_3_sort.cpp  cpp_std_sort.cpp  cpp_vqsort.cpp  cpp_wikisort.cpp  golang_std.cpp  golang_std_ffi_lib.go  shared.h  singeli_singelisort.cpp
src/cpp_pdqsort/: cpp_pdqsort.cpp  mod.rs
src/cpp_std_stable/: cpp_std_sort.cpp
src/fluxsort/: median.rs  mod.rs  partition.rs
src/graveyard/: graveyard.rs  ipn_stable_quicksort.rs  ipn_stable_with_probe_common.rs  mostly_merge_with_libcxx_sort_frontend.rs  rust_ipn.rs  rust_new_unstable_04_11_2022.rs  todo.rs
src/libcxx_stable/: libcxx_sort.cpp  mod.rs
src/libcxx_unstable/: mod.rs
src/new_stable_sort/: mod.rs
src/new_unstable_sort/: mod.rs
src/other/: cpp_highwaysort.rs  cpp_intel_avx512.rs  cpp_simdsort.rs  cpp_vqsort.rs  mod.rs  rust_afsort.rs  rust_radsort.rs  singeli_singelisort.rs
src/stable/: c_fluxsort.rs  c_logsort.rs  cpp_powersort.rs  cpp_powersort_4way.rs  cpp_std.rs  cpp_std_gcc4_3.rs  cpp_std_libcxx.rs  cpp_std_sys.rs  cpp_wikisort.rs  golang_std.rs  mod.rs  rust_driftsort.rs  rust_glidesort.rs  rust_grailsort.rs  rust_ipn.rs  rust_new.rs  rust_rayon_parallel.rs  rust_std.rs  rust_std_vendored.rs  rust_tinysort.rs  rust_wpwoodjr.rs
src/stdlib_unstable/: mod.rs
src/unstable/: c_crumsort.rs  c_fluxsort.rs  c_idisort.rs  c_llvm_libc.rs  c_std_sys.rs  cpp_blockquicksort.rs  cpp_gerbens_qsort.rs  cpp_ips4o.rs  cpp_nanosort.rs  cpp_pdqsort.rs  cpp_simdsort.rs  cpp_std.rs  cpp_std_gcc4_3.rs  cpp_std_libcxx.rs  cpp_std_sys.rs  golang_std.rs  mod.rs  rust_crumsort_rs.rs  rust_dmsort.rs  rust_introsort.rs  rust_ipn.rs  rust_ipnsort.rs  rust_ipnsort_hoare_block.rs  rust_ipnsort_hoare_branchy.rs  rust_ipnsort_hoare_crumsort.rs  rust_ipnsort_lomuto_branchless.rs  rust_ipnsort_lomuto_branchless_cyclic.rs  rust_ipnsort_lomuto_branchless_cyclic_opt.rs  rust_ipnsort_lomuto_branchy.rs  rust_ipnsort_lomuto_nanosort.rs  rust_new.rs  rust_rayon_parallel.rs  rust_std.rs  rust_std_vendored.rs  rust_tinysort.rs
tests/: main.rs
util/: analyze_bench_result.py  analyze_comp_count.py  analyze_inject_results.py  analyze_pivot_data.py  analyze_pivot_quality.py  generate_btb_flush.py  generate_compile_bench.py  generate_network.py  generate_swap_if.py  probe_common_accuracy.py  run_benchmarks.py
util/animation/: README.md
util/binary-size-measurement/: .gitignore  Cargo.toml  eval_bloat.py  measure.sh
util/binary-size-measurement/src/: main.rs
util/compile_time_impact/: Cargo.toml  run_benchmarks.sh
util/compile_time_impact/src/: main.rs  sort_impl_inject.rs
util/graph_bench_result/: .gitignore  comp_count.py  cpu_info.py  direct_versus.py  graph_all.py  produce_graphs.py  requirements.txt  scaling.py  scaling_pattern.py  single_size.py  util.py
util/rustc-sort-bench/: .gitignore  Cargo.toml
util/rustc-sort-bench/src/: benchmark.rs  evaluate.rs  main.rs  measure.rs  patterns.rs
writeup/: README.md  a_thorough_analysis_of_modern_sort_implementations.md
writeup/a_limited_performance_analysis_of_glidesort/: text.md
writeup/a_quick_performance_analysis_of_glidesort/: a_quick_performance_analysis_of_glidesort.md
writeup/driftsort_introduction/: text.md
writeup/glidesort_perf_analysis/: text.md
writeup/intel_avx512/: text.md
writeup/ipnsort_introduction/: text.md
(+337 files in other folders)
