[package]
name = "sort_comp"
version = "0.1.0"
edition = "2021"

[lib]
# They are just noisy and this is not meant as a documented library, but as a testbed.
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
once_cell = "1.15"
paste = "1.0"
zipf = "7.0.0"
radsort = { version = "0.1", optional = true }
dmsort = { version = "1.0", optional = true }
glidesort = { version = "0.1.2", features = ["unstable"], optional = true }

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
core_affinity = { version = "0.7" }

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

# Thin LTO because the bench harness and the library are by default separate "crates" and will not
# benefit from LTO. This is problematic for non-trivial FFI types where the comparison function is
# defined in a separate crate and not visible to the optimizer. C++ in contrast pulls in all this
# information via the headers and doesn't need this.
[profile.release]
lto = "thin"
# opt-level = 0
# debug = true

[profile.bench]
lto = "thin"

[[bench]]
name = "bench"
harness = false

[features]
default = [
    # "cpp_std_sys",
    # "cpp_std_libcxx",
    # "cpp_std_gcc4_3",
    # "cpp_pdqsort",
    # "cpp_powersort",
    # "cpp_simdsort",
    # "cpp_highwaysort",
    # "cpp_intel_avx512",
    # "cpp_ips4o",
    # "cpp_blockquicksort",
    # "c_crumsort",
    # "c_fluxsort",
    # "rust_wpwoodjr",
    # "rust_radsort",
    # "rust_dmsort",
    # "rust_glidesort",
]

# Enable support for C++ std::sort and std::sort_stable.
cpp_std_sys = []

# Enable support for libcxx.
# You must provide a prebuild static libcxx see: https://libcxx.llvm.org/BuildingLibcxx.html
# Set the enviroment variable LIBCXX_CUSTOM_BUILD_DIR=<...>
# This creates a new cpp_std_libcxx.
cpp_std_libcxx = []

# Enable support for C++ std::sort and std::sort_stable, using gcc 4.3 (2008).
cpp_std_gcc4_3 = []

# Enable support for cpp_pdqsort.
# Uses system C++ standard lib.
cpp_pdqsort = []

# Enable powersort from the Multiway Powersort (2022) paper.
# Uses system C++ standard lib.
cpp_powersort = []

# Enable avx2 sort from simd-sort https://github.com/WojciechMula/simd-sort.
# Uses system C++ standard lib.
cpp_simdsort = []

# Enable highway sort from https://github.com/google/highway/tree/master/.
# Uses clang and libcxx.
cpp_highwaysort = []

# Enable avx512 sort from https://github.com/intel/x86-simd-sort.
# Uses clang and libcxx.
cpp_intel_avx512 = []

# Enable ips4o from Engineering In-place (Shared-memory) Sorting Algorithms (2020) paper.
# Uses system C++ standard lib.
cpp_ips4o = []

# Enable BlockQuicksort blocked_double_pivot_check_mosqrt.h from the "BlockQuicksort: Avoiding
# Branch Mispredictions in Quicksort" (2016) paper.
# Uses system C++ standard lib.
cpp_blockquicksort = []

# Enable support for c_crumsort.
# Uses system C++ standard lib.
c_crumsort = []

# Enable support for c_fluxsort.
# Uses system C++ standard lib.
c_fluxsort = []

# Enable rust_wpwoodjr sort.
# No additional requirements, but disabled by default to keep things lean.
rust_wpwoodjr = []

# Enable radsort. Radix sort used by bevy.
# No additional requirements, but disabled by default to keep things lean.
rust_radsort = ["radsort"]

# Enable drop-merge sort developed by Emil Ernerfeldt (emilk)
# No additional requirements, but disabled by default to keep things lean.
rust_dmsort = ["dmsort"]

rust_glidesort = ["glidesort"]

# Enable the sort evolution code.
# Demonstrates various stages and optimizations of stable and unstable sorts.
evolution = []

# --- Other ---

# Add the inline(never) attribute to implementation functions of (un)stable::rust_ipn.
# This allows better tracing with tools like uftrace.
# However this skews the results, the measured effect will vary.
no_inline_sub_functions = []
