[package]
name = "sort_test_tools"
version = "0.1.0"
edition = "2021"
authors = ["Lukas Bergdoll <lukas.bergdoll@gmail.com>"]

[dependencies]
rand = "0.8"

[features]
default = ["large_test_sizes"]

# Enable the largest test sizes, usually fine even for debug builds. May take a couple seconds.
large_test_sizes = []
