[package]
name = "compile_time_impact"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# glidesort = { version = "0.1.2", features = ["unstable"], optional = true }
ipnsort = { path = "../../ipnsort" }
